--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@rushstack/eslint-config": "^2.3.4",
     "@rushstack/heft": "^0.33.0",
     "@rushstack/heft-jest-plugin": "^0.1.3",
+    "@rushstack/heft-node-rig": "^1.2.7",
     "@types/heft-jest": "1.0.2",
     "@types/node": "10.17.13",
     "eslint": "~7.12.1",
