--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v2
       - run: npm install -g pnpm
       - run: pnpm install
-      - run: cd example && pnpm install && ./build
+      - run: cd example && pnpm install && ./build.sh
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         if: ${{ github.ref == 'refs/heads/main' }}
