--- a/example/package.json
+++ b/example/package.json
@@ -1,1 +1,1 @@
-{"dependencies":{"@antora/cli":"2.3","@antora/site-generator-default":"2.3"}}
+{"dependencies":{"@antora/cli":"2.3","@antora/site-generator-default":"2.3"},"devDependencies":{"playwright":"^1.14.1"}}
