--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -18,7 +18,7 @@ jobs:
       - run: cd example && pnpm install && ./build.sh
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
-        if: ${{ github.ref == 'refs/heads/main' }}
+        if: ${{ github.ref == 'refs/heads/master' }}
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./example/build/site
